alterado o css dos itens relacionados para atender novo layout

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -470,9 +470,7 @@ p.section {
 }
 
 #related-items {
-    width: 30%;
-    float: right;
-    margin-left: 10px;
+    width: 203px;
 }
 
 p.section a {
