Correção da class fio-separador, usado como linha separadora entre linhas e entre tiles. Removida a regra de altura mínima.

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1643,10 +1643,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 }
 
 /* fio separador */
-.fio-separador .outstanding-header {
-  border-top: 1px solid #ddd;
-  min-height: 40px;
-}
+.fio-separador .outstanding-header { border-top: 1px solid #ddd; }
 
 /* azul claro */
 .azul-claro .outstanding-header {
