Corrigido tamanho dos itens relacionados para ultima versão do chrome

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -2719,18 +2719,23 @@ ul.formTabs {
 #tiles-list .last-item { float:left; }
 
 /* Correção no tamanho de itens relacionados (tela de gestão) */
-.template-edit #content #form-widgets-relatedItems-input-fields > span.option {
+.template-edit.portaltype-collective-nitf-content #content #form-widgets-relatedItems-input-fields > span.option {
     margin-bottom: 5px;
 }
-.template-edit #content .relationlist-field {
+.template-edit.portaltype-collective-nitf-content #content .relationlist-field {
     float: left;
     margin-right: 5px;
     line-height: 14px;
 }
-.template-edit #content #content-core #form fieldset {
+.template-edit.portaltype-collective-nitf-content #content #content-core #form fieldset {
     width: 100%;
 }
-.template-edit #content .relationlist-field + label > span.label {
+
+.template-edit.portaltype-collective-nitf-content #content #content-core #form fieldset #formfield-form-widgets-relatedItems {
+    width: 496px;
+}
+
+.template-edit.portaltype-collective-nitf-content #content .relationlist-field + label > span.label {
     width: 92%;
     overflow: hidden;
     text-overflow: ellipsis;
