--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -2098,10 +2098,12 @@ dl.portlet div.listingBar a:link {
 	color: #000;
 	font-size: 1.1em;
 	font-weight: bold;
-	padding: 2px 0 0 20px;
+	margin: 2px 0 0 20px;
 	width: 90%;
 }
-
+#search-results-bar>span:first-child + dl{
+    margin-left: 20px;
+}
 #search-filter .field {
 	padding: 1em 0 !Important;
 }
