--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -2079,6 +2079,11 @@ dl.portlet div.listingBar a:link {
 	width: 66.5% !Important;
 }
 
+#search-results > dl.searchResults > dd > span.discreet > span.documentAuthor+span {
+    float: left;
+    width: 100%;
+}
+
 #search-results-bar {
 	border-bottom: 0 none !important;
 	border-top: 0 none !important;
@@ -2101,9 +2106,11 @@ dl.portlet div.listingBar a:link {
 	margin: 2px 0 0 20px;
 	width: 90%;
 }
+
 #search-results-bar>span:first-child + dl{
     margin-left: 20px;
 }
+
 #search-filter .field {
 	padding: 1em 0 !Important;
 }
