* Mover tags para baixo da datas (nova linha) * Mover descrição para baixo do título antes de autor/datas/tags

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -2079,7 +2079,8 @@ dl.portlet div.listingBar a:link {
 	width: 66.5% !Important;
 }
 
-#search-results > dl.searchResults > dd > span.discreet > span.documentAuthor+span {
+#search-results > dl.searchResults > dd > span.discreet > span.documentAuthor+span,
+#search-results > dl.searchResults > dd > span.discreet > span.documentAuthor+span+span {
     float: left;
     width: 100%;
 }
