Alinhar título com demais campos

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -2077,6 +2077,7 @@ dl.portlet div.listingBar a:link {
 
 #search-results {
 	width: 66.5% !Important;
+    padding: 0;
 }
 
 #search-results > dl.searchResults > dd > span.discreet > span.documentAuthor+span,
