--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -2115,7 +2115,8 @@ dl.portlet div.listingBar a:link {
 }
 
 #content-core form.searchPage dd {
-    margin: 0 0 3em 0;
+    margin: 0 0 1.5em 0;
+    overflow: hidden;
 }
 
 #search-filter .field {
