correção na cor marron, conceito infra-estrutura

--- a/src/brasil/gov/temas/themes/verde/css/style.css
+++ b/src/brasil/gov/temas/themes/verde/css/style.css
@@ -1466,7 +1466,7 @@ dl.portlet ul.navTreeLevel0 > .navTreeItem {
 
 .azul .tile-subtitle { color: #1a55dd; }
 
-.marrom-infraestrutura .tile-subtitle { color: #753900; }
+.marrom .tile-subtitle { color: #753900; }
 
 .verde-claro .tile-subtitle { color: #56762b; }
 
